--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Perl extension Text::Tabulate
 
+1.1 Jan 2008
+	- added 'joint' option for use when format and tabulate are
+	  used in a string context.
+
 1.0 July 2007
 	- Turned into a module.
 
