--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Perl extension Text::Tabulate
 
+1.1.1 22 Jan 2008
+	- keyword 'our' didn't exist until Perl 5.6. Require at least
+	  this version of Perl. Otherwise it fails testing.
+
 1.1 Jan 2008
 	- added 'joint' option for use when format and tabulate are
 	  used in a string context.
